# timens-rs

./: .gitattributes  Cargo.toml  README.md  build.rs
examples/: current_time.rs
src/: date.rs  lib.rs  ofday.rs  span.rs  time.rs  timezone.rs  timezone_data.rs
tests/: date_tests.rs  ofday_tests.rs  span_tests.rs  time_tests.rs  timezone_tests.rs
