[package]
name = "timens"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
binprot = { version = "0.1.3", optional = true }
binprot_derive = { version = "0.1.3", optional = true }
rsexp = { version = "0.2.2", optional = true }
byteorder = "1.4.3"

[features]
binio = [ "binprot", "binprot_derive" ]
sexp = [ "rsexp" ]
default = [ "binio", "sexp" ]
