[package]
name = "timens"
version = "0.1.0"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2018"
build = "build.rs"

description = "Simple and efficient library for timestamp and date manipulation."
repository = "https://github.com/LaurentMazare/timens-rs"
keywords = ["time", "calendar", "date", "timezone"]
categories = ["date-and-time"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
binprot = { version = "0.1.3", optional = true }
binprot_derive = { version = "0.1.3", optional = true }
rsexp = { version = "0.2.2", optional = true }
byteorder = "1.4.3"

[features]
binio = [ "binprot", "binprot_derive" ]
sexp = [ "rsexp" ]
default = [ "binio", "sexp" ]

[build-dependencies]
parse-zoneinfo = "0.3"
