[package]
name = "timens"
version = "0.1.7"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2018"
build = "build.rs"

description = "Simple and efficient library for timestamp and date manipulation."
repository = "https://github.com/LaurentMazare/timens-rs"
keywords = ["time", "calendar", "date", "timezone"]
categories = ["date-and-time"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", optional = true }
chrono-tz = { version = "0.4", optional = true }
binprot = { version = "0.1.6", optional = true }
rsexp = { version = "0.2.3", optional = true }

[features]
binio = [ "binprot" ]
sexp = [ "rsexp" ]
default = [ "binio", "sexp" ]
with_chrono = [ "chrono", "chrono-tz" ]

[build-dependencies]
parse-zoneinfo = "0.3"
regex = "1.5.4"

[dev-dependencies]
anyhow = "1.0.48"
